fixed the file on tests